--- a/Example/AnimatableReload/Base.lproj/Main.storyboard
+++ b/Example/AnimatableReload/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="6kr-lR-Ewp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="6kr-lR-Ewp">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,9 +21,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="89" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="goR-Kt-XcU">
-                                <rect key="frame" x="0.0" y="92" width="375" height="575"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="89" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="goR-Kt-XcU" customClass="AnimatableTableView" customModule="AnimatableReload">
+                                <rect key="frame" x="0.0" y="94" width="375" height="573"/>
+                                <color key="backgroundColor" red="1" green="0.92930453130000001" blue="0.75374058939999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="sectionIndexBackgroundColor" red="1" green="0.92930453130000001" blue="0.75374058939999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="89" id="SBG-YL-HUe">
                                         <rect key="frame" x="0.0" y="28" width="375" height="89"/>
@@ -32,7 +33,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="88.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="0.47684186699999997" green="0.50480759139999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -51,7 +52,7 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="goR-Kt-XcU" firstAttribute="top" secondItem="I02-ts-md5" secondAttribute="bottom" id="3c7-i5-wCW"/>
+                            <constraint firstItem="goR-Kt-XcU" firstAttribute="top" secondItem="I02-ts-md5" secondAttribute="bottom" constant="2" id="3c7-i5-wCW"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="goR-Kt-XcU" secondAttribute="bottom" id="McE-EK-s1K"/>
                             <constraint firstAttribute="trailing" secondItem="I02-ts-md5" secondAttribute="trailing" id="P2Y-DZ-x0I"/>
                             <constraint firstItem="goR-Kt-XcU" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="YaE-BI-jbi"/>
@@ -68,7 +69,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="demoTableView" destination="goR-Kt-XcU" id="dzV-3f-tIE"/>
+                        <outlet property="demoTableView" destination="goR-Kt-XcU" id="VrA-JO-Tq5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
@@ -102,10 +103,9 @@
                                     <action selector="segmentButtonClicked:" destination="PBT-O7-Ye0" eventType="valueChanged" id="1M5-jv-pXS"/>
                                 </connections>
                             </segmentedControl>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="KRa-tP-m0a">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="KRa-tP-m0a" customClass="AnimatableCollectionView" customModule="AnimatableReload">
                                 <rect key="frame" x="0.0" y="94" width="375" height="573"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="1" green="0.92930453130000001" blue="0.75374058939999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mv7-iU-UtU">
                                     <size key="itemSize" width="102" height="93"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -120,16 +120,20 @@
                                             <rect key="frame" x="0.0" y="0.0" width="102" height="93"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </view>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="0.47684186699999997" green="0.50480759139999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="KRa-tP-m0a" firstAttribute="leading" secondItem="v6c-CY-pqk" secondAttribute="leading" id="5um-sz-ZSR"/>
+                            <constraint firstItem="ySd-YK-Q2H" firstAttribute="top" secondItem="KRa-tP-m0a" secondAttribute="bottom" id="AHo-bI-lAe"/>
+                            <constraint firstItem="KRa-tP-m0a" firstAttribute="top" secondItem="h97-tz-OqL" secondAttribute="bottom" constant="2" id="G3A-qZ-iFe"/>
                             <constraint firstItem="h97-tz-OqL" firstAttribute="leading" secondItem="v6c-CY-pqk" secondAttribute="leading" id="HZF-Zy-1Gw"/>
                             <constraint firstItem="h97-tz-OqL" firstAttribute="top" secondItem="Xt9-AH-wyF" secondAttribute="bottom" id="Kva-ev-N72"/>
                             <constraint firstAttribute="trailing" secondItem="h97-tz-OqL" secondAttribute="trailing" id="a2r-1w-pXh"/>
+                            <constraint firstAttribute="trailing" secondItem="KRa-tP-m0a" secondAttribute="trailing" id="dHI-Dg-PbX"/>
                         </constraints>
                     </view>
                     <connections>
@@ -145,8 +149,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6kr-lR-Ewp" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="n6s-2D-y7R">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="n6s-2D-y7R">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </navigationBar>
